# kube-ai

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
apps/: __init__.py
apps/api/: __init__.py  control.py  main.py
apps/dashboard/: index.html
controller/: __init__.py  config.py  kubectl_exec.py  main.py  metrics.py  types.py
controller/actuator/: __init__.py  k8s.py
controller/collectors/: __init__.py  k8s.py
controller/policy/: __init__.py  engine.py
controller/tests/: conftest.py  test_actuator.py  test_aimd.py  test_aimd_full.py  test_api.py  test_collector.py  test_config.py  test_kubectl_exec.py  test_policy_engine.py  test_pressure.py  test_rl.py  test_stress.py  test_ui.py
controller/tuner/: __init__.py  aimd.py  rl.py  rl_env.py  train.py
docs/: ATTRIBUTION.md  DESIGN.md  E2E_REAL_MODEL.md  E2E_RESULTS.md  PRODUCTION_READINESS.md  RESEARCH_NOTES.md  WORK_LOG.md
infra/: sandbox.config.yaml
infra/docker/: docker-compose.yml
infra/grafana/dashboards/: kube-ai.json
infra/grafana/provisioning/dashboards/: dashboards.yaml
infra/k8s/: controller-rbac.yaml  mock-vllm-deployment.yaml  mock-vllm-service.yaml  namespace.yaml  real-vllm-cpu-deployment.yaml
infra/kind/: cluster.yaml
infra/mock-vllm/: Dockerfile  app.py
infra/prometheus/: prometheus.yml
infra/serving-shim/: app.py
models/: qtable.json
scripts/: down.sh  e2e-check.sh  load-gen.sh  load-real.py  up.sh
