[project]
name = "kube-ai"
version = "0.1.0"
description = "Kubernetes adaptive control loop for vLLM serving auto-tuning"
license = { text = "MIT" }
authors = [{ name = "vjranagit" }]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.100.0",
  "uvicorn>=0.20.0",
  "prometheus-client>=0.17.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["controller*", "apps*"]
